clusters/cluster0/kubernetes/apps/observability/grafana-operator/app/grafana-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
  - grafana.biggs.dog
  parentRefs:
  - name: grafana
  rules:
  - backendRefs:
    - name: grafana
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
